DROOLS-733: merging in initial code for the execution server consolidation feature.