@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kie</groupId>
+    <groupId>org.kie.server</groupId>
     <artifactId>kie-server-parent</artifactId>
     <version>6.3.0-SNAPSHOT</version>
   </parent>
@@ -10,7 +10,7 @@
   <artifactId>kie-server-tests</artifactId>
   <packaging>pom</packaging>
 
-  <name>KIE :: Execution Server :: Tests Parent</name>
+  <name>KIE :: Execution Server :: Tests</name>
   <description>KIE Execution Server Tests Parent</description>
 
   <!-- Properties shared between the different test modules -->
@@ -42,7 +42,9 @@
   </properties>
 
   <modules>
-    <module>kie-server-integ-tests</module>
+    <module>kie-server-integ-tests-common</module>
+    <module>kie-server-integ-tests-drools</module>
+    <module>kie-server-integ-tests-jbpm</module>
   </modules>
 
   <build>
@@ -75,7 +77,7 @@
               <properties>
                 <cargo.servlet.port>${container.port}</cargo.servlet.port>
                 <!-- kie-server role for REST tests; guest for JMS tests -->
-                <cargo.servlet.users>yoda:usetheforce123@:kie-server,guest</cargo.servlet.users>
+                <cargo.servlet.users>yoda:usetheforce123@:kie-server,guest|Administrator:usetheforce123@:kie-server,guest,Administrators</cargo.servlet.users>
               </properties>
             </configuration>
           </configuration>
@@ -171,6 +173,7 @@
                 <configuration>
                   <properties>
                     <cargo.jboss.configuration>standalone-full</cargo.jboss.configuration>
+                    <cargo.jvmargs>-XX:MaxPermSize=1024m</cargo.jvmargs>
                   </properties>
                 </configuration>
                 <deployables>
@@ -203,6 +206,7 @@
                 <configuration>
                   <properties>
                     <cargo.jboss.configuration>standalone-full</cargo.jboss.configuration>
+                    <cargo.jvmargs>-XX:MaxPermSize=1024m</cargo.jvmargs>
                   </properties>
                 </configuration>
                 <deployables>
@@ -232,6 +236,11 @@
                     <url>${tomcat7x.download.url}</url>
                   </zipUrlInstaller>
                 </container>
+                <configuration>
+                  <properties>
+                    <cargo.jvmargs>-XX:MaxPermSize=1024m</cargo.jvmargs>
+                  </properties>
+                </configuration>
                 <deployables>
                   <deployable>
                     <classifier>webc</classifier>
@@ -259,6 +268,11 @@
                     <url>${tomcat8x.download.url}</url>
                   </zipUrlInstaller>
                 </container>
+                <configuration>
+                  <properties>
+                    <cargo.jvmargs>-XX:MaxPermSize=1024m</cargo.jvmargs>
+                  </properties>
+                </configuration>
                 <deployables>
                   <deployable>
                     <classifier>webc</classifier>
@@ -290,6 +304,7 @@
                 <configuration>
                   <properties>
                     <cargo.jboss.configuration>standalone-full</cargo.jboss.configuration>
+                    <cargo.jvmargs>-XX:MaxPermSize=1024m</cargo.jvmargs>
                   </properties>
                 </configuration>
                 <deployables>
